# mcp-market-data-server

./: .gitignore  MCP_INSPECTOR_SETUP.md  README.md  pyproject.toml  requirements.txt  test_mcp.py  test_orb.py
docs/: FVG_TOOL_DOCUMENTATION.md  ORB_TOOL.md
src/: main.py  run_server.py  server.py
src/server/: config.py
src/server/data/: twelvedata_fetcher.py
src/server/tools/: technical_analysis_tool.py  technical_zones_tool.py  volume_profile_tool.py
src/services/: config.py
src/services/compute/: __init__.py  fvg_calculator.py  technical_analysis.py
src/services/data/: twelvedata_fetcher.py
src/services/tools/: fvg_tool.py  orb_tool.py  technical_analysis_tool.py  technical_zones_tool.py  volume_profile_tool.py
tests/: example_combined_analysis.py  test_fvg.py  test_orb.py
