[project]
name = "mcp-market-data-server"
version = "1.0.0"
description = "MCP Server providing structured market insights for LLM trading agents"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "requests>=2.31.0",
]
authors = [
    {name = "Sayantan", email = "sayantanbhow@gmail.com"}
]
[project.scripts]
mcp-market-data-server = "run_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"